@@ -383,7 +383,7 @@ pm-bauxite-powder=Bauxite powder
 pm-nitrous-iron=Nitrous iron
 pm-pig-iron=Pig iron
 pm-combined-ore-slab=Combined ore slab
-pm-aluminium-sulfate=ALuminium sulfate
+pm-aluminium-sulfate=Aluminium sulfate
 pm-beryllium-sulfate=Beryllium sulfate
 pm-beryl=Beryl
 pm-beryl-powder=Beryl powder
@@ -1325,6 +1325,7 @@ pm-better-vanadium-oxide=Better vanadium oxide
 pm-carbon-to-carbon-dioxide=Carbon to CO2
 pm-borosilicate-magneto-orbital-trap=Borosilicate mangeto orbital trap
 pm-calcium-chloride-seperation=Calcium chloride seperation
+pm-fluxed-titanium-oxide=Fluxed titanium oxide
 
 pm-liquid-brass=Molten brass alloying
 pm-liquid-steel=Molten steel alloying
